# streamio

./: .gitignore  CLAUDE.md  Cargo.toml  Cargo.toml.gstreamer  Cargo.toml.standalone  LICENSE  README.md  build-standalone.ps1  build-standalone.sh  bundle.sh  docker-compose.yml  env.sh  run.sh
.github/workflows/: release.yml
backend/: Cargo.toml
backend/src/: input.rs  main.rs  screen_capture.rs  screen_server.rs
client/: admin.html  index.html  index_standalone.html  screen.html
deploy/: kubevirt-rbac.yaml  ubuntu-base-datavolume.yaml
gateway/: Cargo.toml
gateway/migrations/: 001_init.sql  002_vm_columns.sql
gateway/src/: admin.rs  auth.rs  main.rs  middleware.rs  provisioner.rs  proxy.rs  registry.rs  session.rs
src/: input.rs  main.rs  main_standalone.rs  screen_capture.rs  screen_server.rs  server_standalone.rs  streamer_standalone.rs
src/renderer/: mod.rs  shader.wgsl
src/server/: mod.rs
src/streamer/: mod.rs
types/: Cargo.toml
types/src/: lib.rs
