[package]
name = "streamio-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
streamio-types = { path = "../types" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Web server
axum = { version = "0.7", features = ["ws"] }
axum-extra = { version = "0.9", features = ["cookie"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# OIDC authentication
openidconnect = "3"

# JWT for internal session tokens
jsonwebtoken = "9"

# Database (PostgreSQL)
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }

# Redis (PKCE verifier cache, rate limiting)
redis = { version = "0.27", features = ["aio", "tokio-comp"] }

# HTTP client for backend health polling + WS proxy
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Kubernetes / KubeVirt VM provisioning
kube = { version = "0.97", features = ["runtime", "derive", "client"] }
k8s-openapi = { version = "0.23", features = ["v1_31"] }

# Async trait support
async-trait = "0.1"

# Utilities
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
cookie = "0.18"
